# ChangeLog for dev-perl/Inline-Python
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Inline-Python/ChangeLog,v 1.30 2014/12/10 23:41:48 dilfridge Exp $

  10 Dec 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  Inline-Python-0.460.0.ebuild,
  +files/Inline-Python-0.460.0-insanepython.patch:
  Patch it to honor the python settings, restore keywords

*Inline-Python-0.460.0 (09 Dec 2014)

  09 Dec 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +Inline-Python-0.460.0.ebuild:
  Version bump. Work in progress, still picks wrong Python version.

  10 Mar 2014; Mikle Kolyada <zlogene@gentoo.org> -Inline-Python-0.400.0.ebuild,
  -Inline-Python-0.420.0.ebuild, Inline-Python-0.430.0.ebuild:
  Bump to EAPI=5; Drop old.

*Inline-Python-0.430.0 (18 Sep 2013)

  18 Sep 2013; Patrick Lauer <patrick@gentoo.org> +Inline-Python-0.430.0.ebuild:
  Bump

*Inline-Python-0.420.0 (25 Aug 2013)

  25 Aug 2013; Patrick Lauer <patrick@gentoo.org> +Inline-Python-0.420.0.ebuild:
  Bump

  02 Sep 2012; Torsten Veller <tove@gentoo.org> -Inline-Python-0.390.0.ebuild:
  Cleanup

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*Inline-Python-0.400.0 (29 Feb 2012)

  29 Feb 2012; Robin H. Johnson <robbat2@gentoo.org>
  +Inline-Python-0.400.0.ebuild:
  Version bump via perl-bump experimental tool.

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -Inline-Python-0.31.ebuild,
  -Inline-Python-0.34.ebuild, -Inline-Python-0.35.ebuild,
  -Inline-Python-0.38.ebuild:
  Cleanup

*Inline-Python-0.390.0 (11 Mar 2011)

  11 Mar 2011; Torsten Veller <tove@gentoo.org> +Inline-Python-0.390.0.ebuild:
  Version bump

*Inline-Python-0.38 (27 Jan 2011)

  27 Jan 2011; Robin H. Johnson <robbat2@gentoo.org>
  +Inline-Python-0.38.ebuild:
  Version bump via perl-bump experimental tool.

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Inline-Python-0.28.ebuild,
  -Inline-Python-0.36.ebuild:
  Cleanup
