@@ -1,21 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Inline-Python/Inline-Python-0.430.0.ebuild,v 1.2 2014/03/10 14:51:15 zlogene Exp $
-
-EAPI=5
-
-MODULE_AUTHOR=NINE
-MODULE_VERSION=0.43
-inherit perl-module
-
-DESCRIPTION="Easy implementation of Python extensions"
-
-SLOT="0"
-KEYWORDS="~amd64 ~sparc ~x86"
-IUSE=""
-
-DEPEND=">=dev-perl/Inline-0.42
-	dev-lang/python"
-RDEPEND="${DEPEND}"
-
-SRC_TEST="do"
