@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Inline-Python
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Inline-Python/ChangeLog,v 1.30 2014/12/10 23:41:48 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Inline-Python/ChangeLog,v 1.31 2014/12/13 23:07:42 zlogene Exp $
+
+  13 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> -Inline-Python-0.430.0.ebuild:
+  Drop old
 
   10 Dec 2014; Andreas K. Huettel <dilfridge@gentoo.org>
   Inline-Python-0.460.0.ebuild,
